# splice-weaver-mcp

./: BENCHMARK_README.md  Cargo.toml  EXPERIMENTATION_REPORT.md  INTERFACE_SUMMARY.md  README.md  TESTING.md  TESTING_GUIDE.md  benchmark_config.yaml  boundary-analysis-examples.md  build.rs  dev-install.sh  example-based-learning-system.md  experimentation-plan.md  focused-rust-examples.rs  mcp-config.json  pattern-construction-strategy.md  progressive-refinement-approach.md  run_benchmarks.sh  simple_test.sh  test-cli.js  test-mcp.sh  test_config.yaml  test_discovery.sh  test_requests.json  test_resources.py  test_simple.py  validate_improvements.sh  verify_pagination.md
.github/workflows/: snapshot-testing.yml
assets/: catalog.json
benches/: llm_benchmarks.rs
docs/: SNAPSHOT_TESTING.md
experiments/: cli-exploration-log.md  cli-findings-summary.md  final-experiment-log.md  interactive-test.rs  missing-features.md  test-code.rs
experiments/test-project/: sgconfig.yml
experiments/test-project/rule-tests/: avoid-unwrap-test.yml
experiments/test-project/rule-tests/__snapshots__/: avoid-unwrap-snapshot.yml
experiments/test-project/rules/: avoid-unwrap.yml
notes/: README.md
notes-log/: 00-project-evolution-summary.md  01-main-readme.md  02-design-decisions.md  04-improvements-summary.md  05-testing.md  08-benchmark-readme.md  09-evaluation.md  10-dynamic-resources.md  README.md
notes/design/: mcp-non-tool-features-design.md
notes/implementation/: complete-pattern-construction-guide.md
notes/research/: mcp-best-practices-for-small-llms.md  mcp-resources-prompts-summary.md
scripts/: quick_smoke_test.sh  run_smoke_tests.sh
src/: ast_grep_tools.rs  benchmark_utils.rs  binary_manager.rs  evaluation_client.rs  lib.rs  main.rs  prompts.rs  resources.rs  simple_search.rs  snapshot_utils.rs
test-fixtures/: README.md  test-config.json  test-framework.py
test-fixtures/go/: basic-functions.go
test-fixtures/java/: BasicFunctions.java
test-fixtures/javascript/: basic-functions.js  control-flow.js  variables-and-scope.js
test-fixtures/patterns/: common-patterns.md
test-fixtures/python/: basic-functions.py
test-fixtures/rules/: console-cleanup.yaml  javascript-modernization.yaml  rust-error-handling.yaml
test-fixtures/rust/: basic-functions.rs
test-fixtures/typescript/: classes-and-interfaces.ts
tests/: dry_run_test.rs  end_to_end_test.rs  evaluation_client_smoke_tests.rs  execute_rule_integration_test.rs  integration_tests.rs  mcp_server_smoke_tests.rs  pagination_tests.rs  path_resolution_test.rs  smoke_tests.rs  snapshot_tests.rs  test_helpers.rs
tests/snapshots/: Basic_AST_search_e4b1ea5ad5621c6e.snap.new  Code_refactoring_455d75e928f726db.snap.new  Complex_multi-step_query_82d86d08e11d917a.snap.new  Error_handling_detection_69218325d2c908bc.snap.new  Scope_finding_6691bf36aae880fb.snap.new  consistency_check_1326b7a471a2095b.snap.new
