[package]
name = "mcp-ast-grep"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "MCP server for ast-grep integration"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rmcp = { version = "0.2.0", features = ["transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.0"
