[package]
name = "structured-grepster"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "AST-powered semantic code editor for LLMs - precise, structure-aware editing across 20+ languages. Superior to text-based tools with scope navigation, surgical refactoring, and guided workflows for both large and small models."
license = "MIT"
build = "build.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rmcp = { version = "0.2.0", features = ["transport-io", "client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.0"
reqwest = { version = "0.11", features = ["json"] }
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
clap = { version = "4.0", features = ["derive"] }
rust-embed = "8.0"
# Full text search dependencies
regex = "1.0"
unicode-normalization = "0.1"

[dev-dependencies]
tokio-test = "0.4"

# Test configuration for faster execution
[profile.test]
opt-level = 1

[lib]
name = "mcp_ast_grep"
path = "src/lib.rs"

[[bin]]
name = "structured-grepster"
path = "src/main.rs"

[[bin]]
name = "evaluation-client"
path = "src/bin/evaluation_client.rs"

[build-dependencies]
walkdir = "2.0"
regex = "1.0"
yaml-rust = "0.4"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
